[package]
name = "log_tester"
description = "Test for log messages produced by the log crate"
authors = ["Ultraxime <36888699+Ultraxime@users.noreply.github.com>"]
version = "0.1.2"
readme = "README.md"
repository = "https://github.com/ultraxime/log-tester"
license = "GPL-3.0-only"
edition = "2021"
categories = ["development-tools::testing", "development-tools::debugging"]
keywords = ["log", "testing", "logging", "test"]

[dependencies]
log = { version = "0.4", features = ["std"] }
